@@ -37,6 +37,7 @@ public class TestResult implements ITestResult {
   private ITestContext m_context;
   private int parameterIndex;
   private boolean m_wasRetried;
+  private final IAttributes m_attributes = new Attributes();
 
   private TestResult() {
     //defeat instantiation. We have factory methods.
@@ -53,7 +54,7 @@ public class TestResult implements ITestResult {
   public static TestResult newContextAwareTestResult(ITestNGMethod method, ITestContext ctx) {
     TestResult result = newEmptyTestResult();
     long time = System.currentTimeMillis();
-    result.init(method, null, time, 0L, ctx);
+    result.init(method, ctx, null, time, 0L);
     return result;
   }
 
@@ -61,7 +62,7 @@ public class TestResult implements ITestResult {
       Throwable t) {
     TestResult result = newEmptyTestResult();
     long time = System.currentTimeMillis();
-    result.init(method, t, time, time, ctx);
+    result.init(method, ctx, t, time, time);
     return result;
   }
 
@@ -69,17 +70,22 @@ public class TestResult implements ITestResult {
       Throwable t, long start) {
     TestResult result = newEmptyTestResult();
     long time = System.currentTimeMillis();
-    result.init(method, t, start, time, ctx);
+    result.init(method, ctx, t, start, time);
     return result;
   }
 
-  public void init(
-      ITestNGMethod method,
-      Throwable throwable,
-      long start,
-      long end,
-      ITestContext context) {
-    m_throwable = throwable;
+  public static TestResult newTestResultFrom(TestResult result, ITestNGMethod method,
+      ITestContext ctx, long start) {
+    TestResult testResult = newEmptyTestResult();
+    testResult.setHost(result.getHost());
+    testResult.setParameters(result.getParameters());
+    testResult.init(method, ctx, null, start, 0L);
+    TestResult.copyAttributes(result, testResult);
+    return testResult;
+  }
+
+  private void init(ITestNGMethod method, ITestContext ctx, Throwable t, long start, long end) {
+    m_throwable = t;
     m_instanceName = method.getTestClass().getName();
     if (null == m_throwable) {
       m_status = ITestResult.SUCCESS;
@@ -87,7 +93,7 @@ public class TestResult implements ITestResult {
     m_startMillis = start;
     m_endMillis = end;
     m_method = method;
-    m_context = context;
+    m_context = ctx;
 
     Object instance = method.getInstance();
 
@@ -130,6 +136,9 @@ public class TestResult implements ITestResult {
    */
   @Override
   public String getTestName() {
+    if (this.m_method == null) {
+      return null;
+    }
     Object instance = this.m_method.getInstance();
     if (instance instanceof ITest) {
       return ((ITest) instance).getTestName();
@@ -275,8 +284,6 @@ public class TestResult implements ITestResult {
     return this.m_method.getInstance();
   }
 
-  private final IAttributes m_attributes = new Attributes();
-
   @Override
   public Object getAttribute(String name) {
     return m_attributes.getAttribute(name);
@@ -420,4 +427,12 @@ public class TestResult implements ITestResult {
     List<String> cfgMethodGroups = Arrays.asList(m.getGroups());
     return Arrays.stream(mygroups).anyMatch(cfgMethodGroups::contains);
   }
+
+  static void copyAttributes(ITestResult source, ITestResult target) {
+    source
+        .getAttributeNames()
+        .forEach(name -> target.setAttribute(name, source.getAttribute(name)));
+  }
+
+
 }
