@@ -1,7 +1,11 @@
 package test.inject;
 
+import static org.assertj.core.api.Assertions.assertThat;
+
+import java.util.Map;
 import org.testng.Assert;
 import org.testng.ITestResult;
+import org.testng.Reporter;
 import org.testng.SkipException;
 import org.testng.annotations.AfterMethod;
 import org.testng.annotations.BeforeClass;
@@ -9,6 +13,7 @@ import org.testng.annotations.BeforeMethod;
 import org.testng.annotations.Test;
 
 import java.lang.reflect.Method;
+import org.testng.collections.Maps;
 
 public class InjectBeforeAndAfterMethodsWithTestResultSampleTest {
   static int m_success;
@@ -16,6 +21,7 @@ public class InjectBeforeAndAfterMethodsWithTestResultSampleTest {
 
   @Test
   public void pass() {
+    Assert.assertEquals(Reporter.getCurrentTestResult().getAttribute("before"), 10);
     Assert.assertEquals(m_testResult.getAttribute("before"), 10);
   }
 
@@ -43,11 +49,20 @@ public class InjectBeforeAndAfterMethodsWithTestResultSampleTest {
   @AfterMethod
   public void after(Method m, ITestResult r) {
     String name = m.getName();
-    Assert.assertEquals(r, m_testResult);
+    assertThat(m_testResult.getMethod()).isEqualTo(r.getMethod());
+    assertThat(attributesFrom(m_testResult)).isEqualTo(attributesFrom(r));
     if (("pass".equals(name) && r.getStatus() == ITestResult.SUCCESS)
         || ("fail".equals(name) && r.getStatus() == ITestResult.FAILURE)
         || ("skip".equals(name) && r.getStatus() == ITestResult.SKIP)) {
       m_success--;
     }
+  }
+
+  private static Map<String, Object> attributesFrom(ITestResult r) {
+    Map<String, Object> attributes = Maps.newHashMap();
+    for (String key : r.getAttributeNames()) {
+      attributes.put(key, r.getAttribute(key));
+    }
+    return attributes;
   }
 }
